Fix Layout of Particle.JS with Overflowing List + Cleanup

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -23,9 +23,10 @@ p {
 }
 
 #particles-js {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   background-color: #000000;
   background-image: url("");
   background-repeat: no-repeat;
